# MySQLCpp

./: CMakeLists.txt  README.md  main.cpp
mysql_connector/: mysql_connector.cc  mysql_connector.h
